# multifidelity-water

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  environment.yaml  pyproject.toml  setup.cfg  tox.ini
src/mfwater/: __init__.py  __version__.py
src/mfwater/algo_MFMCPreparation/: mfmcprep.py
src/mfwater/algo_chemical_model/: __init__.py  chemical_model.py
src/mfwater/algo_chemical_model/data/: input.lmp  opc3.zmat  run-lammps-marvin.sh
src/mfwater/algo_eval_estim/: __init__.py  eval_estim.py
src/mfwater/algo_input/: __init__.py  default_input.py
src/mfwater/algo_mfmc/: __init__.py  mfmc.py
src/mfwater/algo_mfmc_preparation/: __init__.py  mfmcprep.py
src/mfwater/algo_model_selection/: __init__.py  model_selection.py
src/mfwater/argparser/: __init__.py  argparser.py
src/mfwater/cli/: entrypoint.py
src/mfwater/input/: default_input.py
test/test_argparser/: __init__.py  test_clargs.py  test_helper_functions.py
test/test_cli/: test_entrypoint.py
test/test_eval_estim/: test_evaluate_estimator.py
test/test_eval_estim/data/: test_eval-estimator_fail_budget.hdf5  test_eval-estimator_fail_correlation.hdf5
test/test_input/: test_build_default_input.py
test/test_mfmc/: test_multifidelity_monte_carlo.py
test/test_mfmc_preparation/: test_multifidelity_preparation.py
test/test_mfmc_preparation/data/: test_mfmc-prep_fail_nevals.hdf5  test_mfmc_fail_correlation.hdf5
test/test_model_selection/: test_get_ordered_index_combinations.py  test_select_optimal_models.py
test/test_model_selection/data/: test_model-select_fail_correlation.hdf5
(+35 files in other folders)
